# cli-enc-project

./: README.md  pyproject.toml  requirements.txt  setup.py
enc_files/: encrypted_file.txt
files/: decrypted_file.txt  encrypted_text  message.txt  signature
keys/: private.pem  public.pem  signature
src/encryption_package/: __init__.py  enctool.py  generate_keys.py  sign_tool.py  signtool.py  utils.py
